--- a/blocks/gallery/__list/gallery__list.css
+++ b/blocks/gallery/__list/gallery__list.css
@@ -1,4 +1,5 @@
 .gallery__list {
   margin: 0;
   padding: 0;
+  z-index: 0;
 }
